# mandatecore

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
api/: routes.py
app/: main.py
app/models/: authority.py  decision.py  outcome.py
demo/: scenarios.py
engine/: audit.py  evidence.py  policy.py  registry.py  validator.py
policies/: README.md  credit_decisions.yaml  fraud_operations.yaml  kyc_remediation.yaml  policy_index.json  wire_transfers.yaml
test/: test_validator.py
